[gd_scene load_steps=4 format=3 uid="uid://dq8r128g82ij2"]

[ext_resource type="Script" path="res://Alchemy/Scripts/alchemy_craftables_slot_ui.gd" id="1_7ix2h"]
[ext_resource type="Texture2D" uid="uid://dqy43lsd3u5ac" path="res://Art/inventory_art/inventory-slot.png" id="2_whx5b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ixgi"]
size = Vector2(12, 12)

[node name="alchemy_craftables_slot_ui" type="Panel"]
custom_minimum_size = Vector2(12, 12)
offset_right = 12.0
offset_bottom = 12.0
mouse_filter = 1
script = ExtResource("1_7ix2h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6, 6)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_whx5b")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="mouse_detection_zone" type="Area2D" parent="CenterContainer"]
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer/mouse_detection_zone"]
position = Vector2(6, 6)
shape = SubResource("RectangleShape2D_5ixgi")

[connection signal="input_event" from="CenterContainer/mouse_detection_zone" to="." method="_on_mouse_detection_zone_input_event"]
[connection signal="mouse_entered" from="CenterContainer/mouse_detection_zone" to="." method="_on_mouse_detection_zone_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/mouse_detection_zone" to="." method="_on_mouse_detection_zone_mouse_exited"]
